# LASER

./: .gitattributes  .gitignore  .gitmodules  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md
Beta+/: LICENSE
Beta+/firmware/analog_laser_controller/: .cproject  .mxproject  .project  analog_laser_controller.ioc  analog_laser_controller.jdebug  analog_laser_controller.launch
Beta+/firmware/analog_laser_controller/Core/Inc/: main.h  stm32f7xx_hal_conf.h
Beta+/firmware/analog_laser_controller/Core/Src/: FOC.c  FOC.h  main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
Beta+/firmware/analog_laser_controller/Debug/: analog_laser_controller.elf  analog_laser_controller.list  analog_laser_controller.map  makefile  objects.list
Beta+/firmware/analog_laser_controller/USB_DEVICE/App/: usbd_cdc_if.c
Beta+/hardware/: L&Aser Beta+ Module BOM Vendor List_Open Release_7_1_25.xlsx
Beta+/software/: README.md
Beta+/software/beta_jetson_code/: .bashrc  boot.sh  start_container_offline.sh  start_container_offline_with_cmd.sh  update_models.sh  upload_datasets.sh
Beta+/software/beta_jetson_code/src/beta_nn_update/: CMakeLists.txt  package.xml
Beta+/software/beta_jetson_code/src/beta_nn_update/scripts/: local_model_scan.py  s3_model_scan.py  update_models.py  update_node.py
Beta+/software/beta_jetson_code/src/beta_path_planning/: CMakeLists.txt  package.xml
Beta+/software/beta_jetson_code/src/beta_path_planning/include/beta_path_planning/: camera_laser_transformer.hpp  planner.hpp
Beta+/software/beta_jetson_code/src/beta_path_planning/launch/: planner.launch.py
Beta+/software/beta_jetson_code/src/beta_path_planning/scripts/: camera_laser_transfomer.py  camera_laser_transfomer_LS.py  planner_viz.py
Beta+/software/beta_jetson_code/src/beta_path_planning/src/: camera_laser_transformer.cpp  planner.cpp
Beta+/software/beta_jetson_code/src/beta_perception/: CMakeLists.txt  package.xml
Beta+/software/beta_jetson_code/src/beta_perception/include/beta_perception/: perception.hpp  visualization.hpp
Beta+/software/beta_jetson_code/src/beta_perception/launch/: perception.launch.py
Beta+/software/beta_jetson_code/src/beta_perception/scripts/: detector_node.py  model.pt  precrocessing_module.py
Beta+/software/beta_jetson_code/src/beta_perception/src/: perception.cpp  visualization.cpp
Beta+/software/beta_jetson_code/src/beta_perception/weights/perception_broccoli/: config.pbtxt
Beta+/software/beta_jetson_code/src/beta_perception/weights/perception_carrot/: config.pbtxt
Beta+/software/beta_jetson_code/src/beta_perception/weights/perception_postprocessing/: config.pbtxt
Beta+/software/beta_jetson_code/src/beta_perception/weights/perception_postprocessing/1/: model.py
Beta+/software/beta_jetson_code/src/beta_perception/weights/perception_router/: config.pbtxt
Beta+/software/beta_jetson_code/src/beta_perception/weights/perception_router/1/: model.py
Beta+/software/beta_jetson_code/src/beta_perception/weights/perception_torch_preprocessing/: config.pbtxt
Beta+/software/beta_jetson_code/src/beta_tracking/: CMakeLists.txt  package.xml
Beta+/software/beta_jetson_code/src/beta_tracking/include/beta_tracking/: FFTBoostedTemplateTracker.h  anchor.h  annotations.h  logging.h  multi_tracking.h  path.h  targeting.hpp  tracked_instance.h  tracker.h  utils.h
Beta+/software/beta_jetson_code/src/beta_tracking/launch/: tracking.launch.py  tracking_bag_launch.py
Beta+/software/beta_jetson_code/src/beta_tracking/msg/: Target.msg  TrackerOutput.msg
Beta+/software/beta_jetson_code/src/beta_tracking/src/: FFTBoostedTemplateTracker.cpp  IOUMultiTracker.cpp  ORBMultiTracker.cpp  annotations.cpp  estimation.cpp  logging.cpp  multi_tracking.cpp  node.cpp  targeting.cpp  tracking_node.cpp  utils.cpp  video_writer.cpp
Beta+/software/beta_jetson_code/src/laser_framework/: CMakeLists.txt  package.xml
Beta+/software/beta_jetson_code/src/laser_framework/farm_demo/: multi_tracking.py  predict_tracking.py  shoot_demo.py  single_tracking.py  stable_tracking.py  stamped_multi_tracking.py  stamped_tracking.py  static_demo.py  system_calib.py  system_targetting.py  tracking_demo.py
Beta+/software/beta_jetson_code/src/laser_framework/include/laser_framework/: keyframe.hpp  system_clock_publisher.hpp
Beta+/software/beta_jetson_code/src/laser_framework/launch/: beta_agception.launch.py  beta_laser.launch.py  camera_laser_calib.launch.py  data_recorder.launch.py  jetson_clock.launch.py  point_and_shoot.launch.py
Beta+/software/beta_jetson_code/src/laser_framework/msg/: BoundingBox.msg
Beta+/software/beta_jetson_code/src/laser_framework/scripts/: point_and_shoot.py  point_and_shoot_LS.py  stop_signal.py  storage_stats.py  system_calib_beta.py  system_calib_beta_least_squares.py  system_targeting.py  upload_data.py
Beta+/software/beta_jetson_code/src/laser_framework/src/: keyframe.cpp  system_clock_publisher.cpp
Beta+/software/beta_jetson_code/src/robot_model_updater_srv/: CMakeLists.txt  package.xml
software/alpha/alpha_perception/: Dockerfile  README.md  entrypoint.sh  start_container.sh
software/alpha/alpha_perception/ros2_ws/src/alpha_perception/: CMakeLists.txt  LICENSE  package.xml
software/alpha/alpha_perception/ros2_ws/src/alpha_perception/include/alpha_perception/: perception.hpp  perception_kernels.cuh
software/alpha/alpha_perception/ros2_ws/src/alpha_perception/launch/: perception_demo.launch.py
software/alpha/alpha_perception/ros2_ws/src/alpha_perception/msg/: BoundingBox.msg
software/alpha/alpha_perception/ros2_ws/src/alpha_perception/scripts/: download_bag.py  download_models.py
software/alpha/alpha_perception/ros2_ws/src/alpha_perception/src/: perception.cpp  perception_kernels.cu
software/alpha/alpha_training/: Dockerfile  README.md  configs  custom_detection.yml  dfine_hgnetv2.yml  dfine_hgnetv2_n_custom.yml  entrypoint.sh  onnx_export.sh  src  start_container.sh  test.sh  test_trained_model.py  train.sh  tune.sh
software/alpha/alpha_training/scripts/: download_dataset.py  download_dataset.sh  download_models.py  download_models.sh
(+84 files in other folders)
