<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beta_path_planning</name>
  <version>0.0.0</version>
  <description>A Path Planner using TSP solver based on clustering heuristics</description>
  <maintainer email="hari@laudando.com">Hari</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_generate_interfaces</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_generate_interfaces</depend>
  <depend>rclpy</depend>
  <depend>beta_perception</depend>
  <depend>beta_tracking</depend>
  <depend>message_filters</depend>
  <depend>Eigen3</depend>
  <depend>OpenCV</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
